--- a/cemaphile/connexion11.html
+++ b/cemaphile/connexion11.html
@@ -113,7 +113,6 @@ button{
     cursor: pointer;
     font-size: lem;
     font-weight: 600;
-    margin: 25px 0 25px;
 
 }
 .register{
@@ -132,28 +131,18 @@ button{
 .register p a:hover{
     text-decoration: underline;
 }
+.forget a {
+  color: #fff;
+}
 
-
-
-
-</style>
+    </style>
     </head>
-<body>
+     <body>
        <section>
 <div class="form-box">
 <div class="form-value">
 <form action="">
-    <h2>Sign Up</h2>
-    <div class="inputbox">
-        <ion-icon name="person-circle-outline"></ion-icon>
-        <input type="fullname" required>
-        <label for="">First name</label>
-    </div>
-    <div class="inputbox">
-        <ion-icon name="person-circle-outline"></ion-icon>
-        <input type="fullname" required>
-        <label for="">Last name</label>
-    </div>
+    <h2>Login</h2>
     <div class="inputbox">
         <ion-icon name="mail-outline"></ion-icon>
         <input type="email" required>
@@ -164,13 +153,14 @@ button{
         <input type="password" required>
         <label for="">Password</label>
     </div>
-    <div class="inputbox">
-        <ion-icon name="lock-closed-outline"></ion-icon>
-        <input type="password" required>
-        <label for="">Confirm your Password</label>
+    <div class="forget">
+        <label for=""><input type="checkbox">Remember Me</label>
+        <a href="file:///C:/Users/HP/OneDrive/Documents/projet/cemaphile/Forget.html"> Forget Password </a>
     </div>
-    
-    <button href="#" >Register</button>
+    <button href="file:///C:/Users/HP/OneDrive/Documents/projet/cemaphile/moviesss.html">Log In</button>
+    <div class="register">
+        <p>Don't have a account <a href="file:///C:/Users/HP/OneDrive/Documents/projet/cemaphile/register.html">Register</a></p>
+    </div>
 </form>
 </div>
 </div>
@@ -181,5 +171,4 @@ button{
 
 
 </html>
-
 
